<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="EStop" Id="{7a8665f7-e86e-4807-86a9-336a6c1b3fd4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EStop
VAR			
	estop_oneleft: ARRAY [1..5] OF WORD := [16#2A2A, 16#2A45, 16#4D45, 16#5247, 16#454E];
	estop_oneright: ARRAY [1..5] OF WORD := [16#4359, 16#2053, 16#544F, 16#502A, 16#2A2A];
	
	remote: ARRAY [1..5] OF WORD := [16#5265, 16#6D6F, 16#7465, 16#2020, 16#2020];
	pit: ARRAY [1..5] OF WORD := [16#5069, 16#7420, 16#2020, 16#2020, 16#2020];
	pump: ARRAY [1..5] OF WORD := [16#5075, 16#6D70, 16#2020, 16#2020, 16#2020];
	upstage: ARRAY [1..5] OF WORD := [16#5570, 16#7374, 16#6167, 16#6520, 16#2020];
	downstage: ARRAY [1..5] OF WORD := [16#446F, 16#776E, 16#7374, 16#6167, 16#6520];
	console: ARRAY [1..5] OF WORD := [16#436F, 16#6E73, 16#6F6C, 16#6520, 16#2020];
	
	pageNum: WORD := 0;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GV_MODBUS.btnData = GV_MODBUS.btnUp THEN
	pageNum := 0;
	Execute_Write_Screen();
END_IF

IF GV_MODBUS.btnData = GV_MODBUS.btnDwn THEN
	pageNum := 1;
	Execute_Write_Screen();
END_IF

IF pageNum = 0 THEN
	GV_MODBUS.oneLeft:= estop_oneleft;
	GV_MODBUS.oneRight:= estop_oneright;   
                           
	GV_MODBUS.twoLeft:= remote;
	IF GV_LIFT.REMOTE_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.twoRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.twoRight:= GV_MODBUS.ok;
	END_IF  
                            
	GV_MODBUS.threeLeft:= pit;
	IF GV_LIFT.PIT_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.threeRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.threeRight:= GV_MODBUS.ok;
	END_IF	
                               
	GV_MODBUS.fourLeft:= pump; 
	IF GV_LIFT.PUMP_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.fourRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.fourRight:= GV_MODBUS.ok;		
	END_IF
END_IF

IF pageNum = 1 THEN
	GV_MODBUS.oneLeft:= estop_oneleft;
	GV_MODBUS.oneRight:= estop_oneright;   
                           
	GV_MODBUS.twoLeft:= downstage;
	IF GV_LIFT.DOWNSTAGE_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.twoRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.twoRight:= GV_MODBUS.ok;
	END_IF
                            
	GV_MODBUS.threeLeft:= upstage;
	IF GV_LIFT.UPSTAGE_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.threeRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.threeRight:= GV_MODBUS.ok;
	END_IF
                               
	GV_MODBUS.fourLeft:= console; 
	IF GV_LIFT.CONSOLE_ESTOP_INDICATOR_OUT THEN
		GV_MODBUS.fourRight:= GV_MODBUS.engaged;
	ELSE
		GV_MODBUS.fourRight:= GV_MODBUS.ok;
	END_IF
END_IF

IF NOT GV_MODBUS.readExecute AND GV_MODBUS.addr = GV_MODBUS.oneLeftAddr THEN
	GV_MODBUS.data:= GV_MODBUS.oneLeft;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="EStop">
      <LineId Id="246" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="249" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="252" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="136" Count="2" />
      <LineId Id="144" Count="0" />
      <LineId Id="139" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="141" Count="1" />
      <LineId Id="152" Count="3" />
      <LineId Id="151" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="158" Count="1" />
      <LineId Id="157" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="118" Count="1" />
      <LineId Id="145" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="161" Count="4" />
      <LineId Id="122" Count="1" />
      <LineId Id="166" Count="4" />
      <LineId Id="124" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="173" Count="1" />
      <LineId Id="172" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="265" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="268" Count="0" />
      <LineId Id="267" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>